Fixed Bug 2286774: Problems playing modules from folders with '!' in pathname Urlencode '!' to '%21' in archive paths when using 'jar://' URLs.
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@4860 67b53d14-2c14-4ace-a08f-0dab2b34000c